--- a/assets/style.css
+++ b/assets/style.css
@@ -1,12 +1,11 @@
-#map { width: 600px;
+#map { width: 1/3;
     height: 400px;
-    position: relative;
-    right: -40%;
-    top: -80%
+    
+    
 
  }
 
 #BG {
-    background-color: blueviolet;
+    background-color: rgb(180, 47, 47);
     height: 100%;
 }
